[12.1] released ...
* A warning about an initalization of an unsigned value to -1 has been
  eliminated (patch by Matthew Sienkiewicz).

[12.0] released 3/4/06
* The program has been integrated into the Heirloom project as "mailx". The
  new project homepage is at <http://heirloom.sourceforge.net/mailx.html>.
  The name "nail" will persist in some places, and the mailing list will
  remain with the same address for now. If you want to continue to call
  the program as "nail", create a symbolic link to "mailx".
* Mailx no longer prints a space before the address in "MAIL FROM:<xxx>" and
  "RCPT TO:<xxx>" in SMTP. This should make it work with Sendmail X (bugs
  reported by Stephane Lentz and Claus Assmann).
* The new "-S variable[=value]" command line option sets the internal option
  "variable", and, in case of a string option, assigns "value" to it (based
  on a request by Dmitry Butskoy).
* If the "smtp-auth-user" variable is set but neither "smtp-auth-password"
  nor a matching "smtp-auth-password-user@host" can be found, the user is
  asked for the SMTP AUTH password on the terminal (proposed by
  Svend Sorensen).
* When a TERM signal is sent to the SMTP transfer child process, it will
  abort and save the message to the "dead.letter" file (proposed by
  Perry Hutchison).
* Use of the "resend" command with multiple messages at once now works as
  documented (bug reported by Svend Sorensen).
* When the "next" or newline command is typed as the first command after a
  folder has been opened, the first (new) message is printed even if a
  folder hook has been executed previously (bugreport by Stephen Isard).
* In combination with OpenSSL, when a SIGPIPE was received on an SSL socket
  during a call to SSL_read() e.g. because an IMAP connection had timed out,
  a segmentation fault occurred because OpenSSL apparently cannot handle
  calls to SSL_shutdown() from the signal handler. This has been fixed (bug
  reported by Svend Sorensen).