@@ -1,6 +1,10 @@
 [12.1] released ...
 * A warning about an initalization of an unsigned value to -1 has been
   eliminated (patch by Matthew Sienkiewicz).
+* Percent characters in the "prompt" variable are now handled correctly;
+  values of "folder" beginning with an at sign and longer than the
+  maximum system path length do not cause a heap overflow anymore (patch
+  by Ulf Harnhammar).
 
 [12.0] released 3/4/06
 * The program has been integrated into the Heirloom project as "mailx". The
